[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "culture-compass"
version = "1.0.0"
description = "GenAI-powered travel discovery platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["engine", "data"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # function-call-in-default-argument (Streamlit pattern)
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary vs if-else — style choice
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert statements are expected in tests

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes= ["Test*"]
python_functions = ["test_*"]
addopts       = "-q --tb=short"

[tool.mypy]
python_version = "3.12"
strict         = true
ignore_missing_imports = true
